--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -6,5 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h3>Test App</h3>
+        <p>Home</p>
+        <a href="/signin">Sign In</a>
+    </header>
 </body>
 </html>
