add welcome block header

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -15,6 +15,9 @@
         <p>Home</p>
         <a href="/signin">Sign In</a>
     </header>
+    <div>
+        <h1>Welcome to the Test</h1>
+    </div>
 </body>
 
 </html>
