add lorem ipsum for welcome text

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -17,6 +17,7 @@
     </header>
     <div>
         <h1>Welcome to the Test</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus libero placeat maiores repellendus rem!</p>
     </div>
 </body>
 
