--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -18,6 +18,7 @@
     <div>
         <h1>Welcome to the Test</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus libero placeat maiores repellendus rem!</p>
+        <a href="/register">Start</a>
     </div>
 </body>
 
