div for explanation cards

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -20,6 +20,9 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus libero placeat maiores repellendus rem!</p>
         <a href="/register"><button>Start</button></a>
     </div>
+    <div>
+        
+    </div>
 </body>
 
 </html>
