--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -21,7 +21,10 @@
         <a href="/register"><button>Start</button></a>
     </div>
     <div>
-        
+        <div>
+            <h3>Manage Users</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias, nemo!</p>
+        </div>
     </div>
 </body>
 
