add second description card

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -25,6 +25,10 @@
             <h3>Manage Users</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias, nemo!</p>
         </div>
+        <div>
+            <h3>Leave Messages</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, placeat.</p>
+        </div>
     </div>
 </body>
 
