add third description card

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -29,6 +29,10 @@
             <h3>Leave Messages</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, placeat.</p>
         </div>
+        <div>
+            <h3>Edit User Information</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, possimus!</p>
+        </div>
     </div>
 </body>
 
