--- a/dashboard/templates/sign-in.html
+++ b/dashboard/templates/sign-in.html
@@ -11,5 +11,8 @@
         <p>Home</p>
         <a href="/signin">Sign In</a>
     </header>
+    <div>
+        <h1>Signin</h1>
+    </div>
 </body>
 </html>
