add signin form

--- a/dashboard/templates/sign-in.html
+++ b/dashboard/templates/sign-in.html
@@ -13,6 +13,12 @@
     </header>
     <div>
         <h1>Signin</h1>
+        <form action="/sign_in">
+        <label for="email_address">Email Address</label>
+        <input type="text" name="email_address">
+        <label for="password">Password</label>
+        <input type="text" name="password">
+        </form>
     </div>
 </body>
 </html>
