add registration link

--- a/dashboard/templates/sign-in.html
+++ b/dashboard/templates/sign-in.html
@@ -19,6 +19,7 @@
         <label for="password">Password</label>
         <input type="text" name="password">
         </form>
+        <a href="/register">Don't have an account? Register</a>
     </div>
 </body>
 </html>
