--- a/dashboard/templates/register.html
+++ b/dashboard/templates/register.html
@@ -8,6 +8,32 @@
     <title>Register</title>
 </head>
 <body>
-    
+    <div class="w-100">
+        <h1 class="ml-3">Registration</h1>
+        <form action="/register_user" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="first_name" class="col-sm-2 col-form-label">First Name</label>
+                <input type="text" name="first_name" id="first_name">
+            </div>
+            <div class="form-group">
+                <label for="last_name" class="col-sm-2 col-form-label">Last Name</label>
+                <input type="text" name="last_name" id="last_name">
+            </div>
+            <div class="form-group">
+                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                <input type="text" name="email" id="email">
+            </div>
+            <div class="form-group">
+                <label for="password" class="col-sm-2 col-form-label">Password</label>
+                <input type="text" name="password" id="password">
+            </div>
+            <div class="form-group">
+                <label for="conf_password" class="col-sm-2 col-form-label">Confirm Password</label>
+                <input type="text" name="conf_password" id="conf_password">
+            </div>
+            <input type="submit" value="Register" class="form-group ml-3">
+        </form>
+    </div>
 </body>
 </html>
