--- a/dashboard/templates/register.html
+++ b/dashboard/templates/register.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <header>
+        <h3>Test App</h3>
+        <p>Home</p>
+        <a href="/signin">Sign In</a>
+    </header>
     <div class="w-100">
         <h1 class="ml-3">Registration</h1>
         <form action="/register_user" method="POST">
