--- a/dashboard/templates/login.html
+++ b/dashboard/templates/login.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <header>
+        <h3>Test App</h3>
+        <p>Home</p>
+        <a href="/signin">Sign In</a>
+    </header>
     <h1 class="ml-3">Login</h1>
     <form action="/user_login" method="POST">
         {% csrf_token %}
